--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="header">
       <div class="profile">
-        <a href="/home.html" class="home-link">
+        <a href="/index.html" class="home-link">
           <h1>Matt Tognotti</h1>
         </a>
       </div>
