--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <a href="/home.html" class="home-link"><h1>Matt Tognotti</h1></a>
+      <a href="/index.html" class="home-link"><h1>Matt Tognotti</h1></a>
       <div class="nav">
         <a href="/projects.html">Projects</a>
         <a href="/publications.html">Publications</a>
