--- a/publications.html
+++ b/publications.html
@@ -7,11 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matt Tognotti</title>
   <link rel="stylesheet" href="styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <a href="/index.html" class="home-link"><h1>Matt Tognotti</h1></a>
+      <div class="profile">
+        <a href="/home.html" class="home-link">
+          <h1>Matt Tognotti</h1>
+        </a>
+      </div>
       <div class="nav">
         <a href="/projects.html">Projects</a>
         <a href="/publications.html">Publications</a>
