--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="header">
       <div class="profile">
-        <a href="/index.html" class="home-link">
+        <a href="/home.html" class="home-link">
           <h1>Matt Tognotti</h1>
         </a>
       </div>
@@ -27,7 +27,7 @@
       </div>
     </div>
     <p>Hey there. I'm a recent graduate from Santa Clara University. I studied Electrical and Computer Engineering. For two years I was a research assistant in a robotics lab.</p>
-    <p>We developed a mobile manipulator interfaced through speech; check it out on the <a href="#">projects</a> page.</p>
+    <p>We developed a mobile manipulator interfaced through speech; check it out on the <a href="/projects.html">projects</a> page.</p>
     <p>I am currently looking for software engineering positions at startups with cool people. If you'd like to chat, send an email. I currently reside in the SF Bay Area.</p>
     <hr>
     <div class="contacts">
