--- a/index.html
+++ b/index.html
@@ -17,18 +17,31 @@
   <div class="container">
     <div class="header">
       <div class="profile">
-        <a href="/index.html" class="home-link">
-          <h1>Matt Tognotti</h1>
-        </a>
+        <a href="/index.html" class="home-link">Matt Tognotti</a>
       </div>
       <div class="nav">
         <a href="/projects.html">Projects</a>
         <a href="/publications.html">Publications</a>
       </div>
     </div>
-    <p>Hey there. I'm a recent graduate from Santa Clara University. I studied Electrical and Computer Engineering. For two years I was a research assistant in a robotics lab.</p>
-    <p>We developed a mobile manipulator interfaced through speech; check it out on the <a href="/projects.html">projects</a> page.</p>
-    <p>I am currently looking for software engineering positions at startups with cool people. If you'd like to chat, send an email. I currently reside in the SF Bay Area.</p>
+    <hr>
+    <p>I'm a recent graduate from Santa Clara University (SCU). I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human
+      Interaction and Innovation Robotics Lab at SCU.</p>
+    <p>We developed a mobile manipulator interfaced through speech; check out videos of the robot in action on the <a href="/projects.html">projects</a> page 
+      and our publications on the  <a href="/publications.html">publications</a> page</p>
+    <div class="image-container">
+      <img src="/pictures/robot.png" alt="Robot" class="robot-pic">
+      <img src="/pictures/system.png" alt="System" class="system-pic">
+      <img src="/pictures/sim.png" alt="Sim" class="sim-pic">
+    </div>
+    <hr>
+    <p>After graduating with my engineering degree cum laude, I traveled outside of the U.S. for the first time to Japan.</p>
+    <p>While in Japan I tried matcha, a shade-grown green tea powder. I quickly realized that the quality of their matcha was significantly 
+      better than anything I've tried in the U.S. </p>
+    <p>After returning to the U.S., I decided to start an eccomerce business importing matcha from Japan with my business partner Skylar. 
+      After testing over 50 different types of matcha 
+      from different regions and cultivars, we selected the best matcha we found and developed a strong relationship with our tea farmer in Japan.</p> 
+      We now sell the best matcha on our website <a href="https://www.mattsmatcha.com">mattsmatcha.com</a>.</p>
     <hr>
     <div class="contacts">
       <!-- <img src="/pictures/me.jpg" alt="Profile Picture" class="profile-pic"> -->
