--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,3 @@
-<!-- Why are you reading my code? -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,15 +15,14 @@
   <div class="container">
     <div class="header">
       <div class="profile">
-        <a href="/index.html" class="home-link">
-          <h1>Matt Tognotti</h1>
-        </a>
+        <a href="/index.html" class="home-link">Matt Tognotti</a>
       </div>
       <div class="nav">
         <a href="/projects.html">Projects</a>
         <a href="/publications.html">Publications</a>
       </div>
     </div>
+    <hr>
     <p><b>[1]</b> <b>Tognotti, M.</b>, and Kyrarini, M., 2024. Getting Ready: An Intelligent Robotic System for Assisting with Activities of Daily Living. 33rd IEEE International Conference on Robot and Human Interactive Communication (RO-MAN). [Accepted]</p>
     <p><b>[2]</b> Kodur, K., Zand, M., <b>Tognotti, M.</b>, and Kyrarini, M., 2024. Translucent Object Grasping using Robot Vision. 2024 10th International Conference on Automation, Robotics and Applications (ICARA). IEEE. [In press]</p>
     <p><b>[3]</b> Kodur, K., Zand, M., <b>Tognotti, M.</b>, Jauregui, C. and Kyrarini, M., 2023. Structured and Unstructured Speech2Action Frameworks for Human-Robot Collaboration: A User Study. IEEE Transactions on Human-Machine Systems. Available: 10.36227/techrxiv.24022452. [Under Review]</p> 
