--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,3 @@
-<!-- Why are you reading my code? -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,16 +15,19 @@
   <div class="container">
     <div class="header">
       <div class="profile">
-        <a href="/index.html" class="home-link">
-          <h1>Matt Tognotti</h1>
-        </a>
+        <a href="/index.html" class="home-link">Matt Tognotti</a>
       </div>
       <div class="nav">
         <a href="/projects.html">Projects</a>
         <a href="/publications.html">Publications</a>
       </div>
     </div>
-    <p>Under Construction </p>
+    <hr>
+    <div class="video-container">
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/I1os_-2GVwU" class="video"></iframe>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/7ieUHwGYHr8" class="video"></iframe>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/3ZwdYYUvZRw" class="video"></iframe>
+   </div>
   </div>
 </body>
 </html>
