--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
       After testing over 50 different types of matcha 
       from different regions and cultivars, we selected the best matcha we found and developed a strong relationship with our tea farmer in Japan.</p> 
       We now sell the best matcha on our website <a href="https://www.mattsmatcha.com">mattsmatcha.com</a>.</p>
+
     <hr>
-    <div class="contacts">
-      <!-- <img src="/pictures/me.jpg" alt="Profile Picture" class="profile-pic"> -->
+    
+    <footer>
       <p><a href="https://www.linkedin.com/in/matthewtognotti/">LinkedIn</a> (/matthewtognotti)</p>
       <p><a href="https://github.com/matthewtognotti">Github</a> (@matthewtognotti)</p>
       <p><a href="https://x.com/MatthewTognotti">Twitter</a> (@matthewtognotti)</p>
-    </div>
+    </footer>
+    
   </div>
 </body>
 </html>
