--- a/index.html
+++ b/index.html
@@ -25,26 +25,40 @@
       </div>
     </div>
     <hr>
-    <p>I'm a recent graduate from Santa Clara University (SCU). I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human
-      Interaction and Innovation Robotics Lab at SCU.</p>
-    <p>We developed a mobile manipulator interfaced through speech; check out videos of the robot in action on the <a href="/projects.html">projects</a> page 
-      and our publications on the  <a href="/publications.html">publications</a> page</p>
-    <div class="image-container">
-      <img src="/pictures/robot.png" alt="Robot" class="robot-pic">
-      <img src="/pictures/system.png" alt="System" class="system-pic">
-      <img src="/pictures/sim.png" alt="Sim" class="sim-pic">
-    </div>
-    <hr>
-    <p>After graduating with my engineering degree cum laude, I traveled outside of the U.S. for the first time to Japan.</p>
-    <p>While in Japan I tried matcha, a shade-grown green tea powder. I quickly realized that the quality of their matcha was significantly 
-      better than anything I've tried in the U.S. </p>
-    <p>After returning to the U.S., I decided to start an eccomerce business importing matcha from Japan with my business partner Skylar. 
-      After testing over 50 different types of matcha 
-      from different regions and cultivars, we selected the best matcha we found and developed a strong relationship with our tea farmer in Japan.</p> 
-      We now sell the best matcha on our website <a href="https://www.mattsmatcha.com">mattsmatcha.com</a>.</p>
+    <h3>Software Engineering & Robotics</h3>
+    <ul>
+      <li>I'm a recent graduate from Santa Clara University (SCU). I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human
+        Interaction and Innovation Robotics Lab at SCU.
+      </li>
+      <br>
+      <li>We developed a mobile manipulator interfaced through speech; check out videos of the robot in action on the <a href="/projects.html">projects</a> page 
+      and our publications on the  <a href="/publications.html">publications</a> page
+      </li>
+      <br>
+    </ul>
+      <div class="image-container">
+        <img src="/pictures/robot.png" alt="Robot" class="robot-pic">
+        <img src="/pictures/system.png" alt="System" class="system-pic">
+        <img src="/pictures/sim.png" alt="Sim" class="sim-pic">
+      </div>
 
     <hr>
+    <h3>Product Management, Eccomerce, & more</h3>
+    <ul>
+    <li>After graduating with my engineering degree cum laude, I traveled outside of the U.S. for the first time to Japan.</li>
+    <br>
+    <li>While in Japan I tried matcha, a shade-grown green tea powder. I quickly realized that the quality of their matcha was significantly 
+      better than anything I've tried in the U.S. </li>
+    <br>
+    <li>After returning to the U.S., I decided to start an eccomerce business importing matcha from Japan with my business partner Skylar. 
+      After testing over 50 different types of matcha 
+      from different regions and cultivars, we selected the best matcha we found and developed a strong relationship with our tea farmer in Japan.</li> 
+      <br>
+      <li>We now sell the best matcha on our website <a href="https://www.mattsmatcha.com">mattsmatcha.com</a>.</li>
+    </ul>  
+    <hr>
     
+    <h3>Contact Me</h3>
     <footer>
       <p><a href="https://www.linkedin.com/in/matthewtognotti/">LinkedIn</a> (/matthewtognotti)</p>
       <p><a href="https://github.com/matthewtognotti">Github</a> (@matthewtognotti)</p>
