--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
         <img src="/pictures/system.png" alt="System" class="system-pic">
         <img src="/pictures/sim.png" alt="Sim" class="sim-pic">
       </div>
-
+    <br>
     <hr>
-    <h3>Product Management, Eccomerce, & more</h3>
+    <h3>Product Management, Ecommerce, & More</h3>
     <ul>
     <li>After graduating with my engineering degree cum laude, I traveled outside of the U.S. for the first time to Japan.</li>
     <br>
     <li>While in Japan I tried matcha, a shade-grown green tea powder. I quickly realized that the quality of their matcha was significantly 
       better than anything I've tried in the U.S. </li>
     <br>
-    <li>After returning to the U.S., I decided to start an eccomerce business importing matcha from Japan with my business partner Skylar. 
+    <li>After returning to the U.S., I decided to start an ecommerce business importing matcha from Japan with my business partner Skylar. 
       After testing over 50 different types of matcha 
       from different regions and cultivars, we selected the best matcha we found and developed a strong relationship with our tea farmer in Japan.</li> 
       <br>
