--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </p>
 
         <p class="mt-3 text-sm text-gray-600 dark:text-neutral-400">
-            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action on the <a href="/projects.html">projects</a> page 
-            and our publications on the publications page.
+            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications"href="#videos">below</a> 
+            and our publications <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications">here</a> 
         </p>
 
         <ul class="mt-5 flex flex-col gap-y-3">
@@ -126,23 +126,6 @@
         </ul>
       </div>
       <!-- End About -->
-
-
-      <!-- Robot Videos -->
-       
-      <!-- <div class="mt-10 sm:mt-14">
-
-        <h2 class="mb-5 font-medium text-gray-800 dark:text-neutral-200">
-          Robot Videos
-        </h2>
-
-        <iframe src="https://www.youtube.com/embed/I1os_-2GVwU" class="group block overflow-hidden rounded-lg relative inset-0 w-half h-half" allowfullscreen frameborder="0" …></iframe>
-        <iframe src="https://www.youtube.com/embed/7ieUHwGYHr8" class="group block overflow-hidden rounded-lg relative inset-0 w-half h-half" allowfullscreen frameborder="0" …></iframe>
-        <iframe src="https://www.youtube.com/embed/3ZwdYYUvZRw" class= "group block overflow-hidden rounded-lg relative inset-0 w-half h-half" allowfullscreen frameborder="0" …></iframe>
-
-    </div> -->
-
-      <!-- End Robot Videos -->
 
       <!-- Work Experience -->
       <div class="mt-10 sm:mt-14">
