--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <!-- About -->
       <div class="mt-8">
         <p class="text-sm text-gray-600 dark:text-neutral-400">
-            I'm a recent graduate from Santa Clara University (SCU). I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human
+            I'm a recent graduate from Santa Clara University. I studied Electrical and Computer Engineering. For two years I was a research assistant in the Human
             Interaction and Innovation Robotics Lab at SCU.
         </p>
 
