--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+   <!-- FAVICON -->
+  <link rel="icon" type="image/x-icon" href="/pictures/favicon.svg">
+
   <!-- Theme Check and Update -->
   <script>
     const html = document.querySelector('html');
