--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           Robot Videos
         </h2>
 
-        <p class="text-sm text-black-600 dark:text-neutral-400 mb-5 mt-10">
+        <p class="text-sm text-black-600 dark:text-neutral-400 mb-5">
             This first video shows the robot executing a task that it was previously taught. 
         </p>
         <div class="mb-5 relative" style="padding-top: 56.25%">
