--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="icon" type="image/x-icon" href="/pictures/favicon.svg">
 
   <!-- Theme Check and Update -->
-  <script>
+  <!-- <script>
     const html = document.querySelector('html');
     const isLightOrAuto = localStorage.getItem('hs_theme') === 'light' || (localStorage.getItem('hs_theme') === 'auto' && !window.matchMedia('(prefers-color-scheme: dark)').matches);
     const isDarkOrAuto = localStorage.getItem('hs_theme') === 'dark' || (localStorage.getItem('hs_theme') === 'auto' && window.matchMedia('(prefers-color-scheme: dark)').matches);
@@ -25,7 +25,7 @@
     else if (isDarkOrAuto && html.classList.contains('light')) html.classList.remove('light');
     else if (isDarkOrAuto && !html.classList.contains('dark')) html.classList.add('dark');
     else if (isLightOrAuto && !html.classList.contains('light')) html.classList.add('light');
-  </script>
+  </script> -->
 
   <!-- CSS Preline -->
   <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css">
