fixed anchor links

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </p>
 
         <p class="mt-3 text-sm text-gray-600 dark:text-neutral-400">
-            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications"href="#videos">below</a> 
+            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos"href="#videos">below</a> 
             and our publications <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications">here</a> 
         </p>
 
@@ -176,7 +176,7 @@
                     Enhanced robot delivery task efficiency by 67% through code optimization.
                 </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Videos of the robot and the learning system are <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="videos.html">here</a>
+                    Videos of the robot and the learning system are <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">here</a>
                 </li>
               </ul>
             </div>
