--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#publications">Publications</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#awards">Awards</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#videos">Robot Videos</a>
+          <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">below</a>
         </div>
       </div>
     </nav>
@@ -103,7 +104,7 @@
         </p>
 
         <p class="mt-3 text-sm text-gray-600 dark:text-neutral-400">
-            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos"href="#videos">below</a> 
+            We developed a mobile manipulator interfaced through speech; check out videos of the robot in action <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">below</a> 
             and our publications <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#publications">here</a> 
         </p>
 
