disable scroll.js (with offset) and use scroll-mt-20 instead with <html class="scroll-smooth" lang="en">

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="scroll-smooth" lang="en">
 <head>
   <!-- Required Meta Tags Always Come First -->
   <meta charset="utf-8">
@@ -68,7 +68,6 @@
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#publications">Publications</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#awards">Awards</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-gray-500 hover:text-gray-800 focus:outline-none dark:text-neutral-400 dark:hover:text-neutral-200" href="#videos">Robot Videos</a>
-          <a class = "text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">below</a>
         </div>
       </div>
     </nav>
@@ -132,7 +131,7 @@
       <!-- End About -->
 
       <!-- Work Experience -->
-      <div id="experience" class="mt-10 sm:mt-14">
+      <div id="experience" class="scroll-mt-20 mt-10 sm:mt-14">
 
         <div class="grow">
             <h1 class="text-lg font-medium text-gray-800 dark:text-neutral-200">
@@ -336,7 +335,7 @@
 
 
     <!-- Publications -->
-    <div id="publications" class="my-10 sm:my-14">
+    <div id="publications" class="scroll-mt-20 my-10 sm:my-14">
         <h2 class="mb-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
           Publications
         </h2>
@@ -379,7 +378,7 @@
       <!-- End Publications -->
 
       <!-- Skills -->
-      <div id="awards" class="my-10 sm:my-14">
+      <div id="awards" class="scroll-mt-20 my-10 sm:my-14">
         <h2 class="mb-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
           Awards, Skills, & Interests
         </h2>
@@ -482,7 +481,7 @@
 
 
       <!-- Robot Videos -->
-      <div id="videos" class="mt-10 sm:mt-14">
+      <div id="videos" class="scroll-mt-20 mt-10 sm:mt-14">
         <h2 class="mb-5 mt-5 text-lg font-medium text-gray-800 dark:text-neutral-200">
           Robot Videos
         </h2>
@@ -587,7 +586,7 @@
   <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.min.js"></script>
 
   <!-- SMOOTH SCROLLING -->
-  <script src="scroll.js"></script>
+  <!-- <script src="scroll.js"></script> -->
 
 
 </body>
