update to fixed instead of sticky to fix scrolling on mobile. Added margin to top and adjust padding

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body id="start" class="dark:bg-neutral-900">
   <!-- ========== HEADER ========== -->
-  <header class="sticky top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full text-sm">
+  <header class="fixed top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full text-sm">
     <nav class="mt-4 relative max-w-2xl w-full bg-white border border-gray-200 rounded-[2rem] mx-2 py-2.5 md:flex md:items-center md:justify-between md:py-0 md:px-4 md:mx-auto dark:bg-neutral-900 dark:border-neutral-700">
       <div class="px-4 md:px-0 flex justify-between items-center">
         <!-- Logo -->
@@ -76,7 +76,7 @@
 
   <!-- ========== MAIN CONTENT ========== -->
   <main id="content">
-    <div class="w-full max-w-2xl mx-auto pt-10 md:pt-16 px-4 sm:px-6 lg:px-8">
+    <div class="w-full max-w-2xl mx-auto mt-10 pt-20 md:pt-40 px-4 sm:px-6 lg:px-8">
       <!-- Profile -->
       <div class="flex items-center gap-x-3">
 
@@ -585,9 +585,8 @@
   <!-- Required plugins -->
   <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.min.js"></script>
 
-  <!-- SMOOTH SCROLLING -->
-  <!-- <script src="scroll.js"></script> -->
-
+  <!-- MY SCRIPTS -->
+  <!-- <script src="scripts.js"></script> -->
 
 </body>
 </html>
