--- a/index.html
+++ b/index.html
@@ -340,6 +340,9 @@
           Publications
         </h2>
 
+        <img class="w-20 mb-6" src="pictures/nsf.png">
+        <!-- <img class="w-20 mb-3" src="pictures/IEEE.jpg"> -->
+
         <!-- List -->
         <ul class="space-y-10">
           <li>
