refine project descriptions and enhance skills list; remove unused SVG file

--- a/index.html
+++ b/index.html
@@ -271,10 +271,8 @@
                     Designed an API to control a manipulator and mobile base using Python and Robot Operating System (ROS).
                 </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Created and tested software to teleoperate a manipulator for kinesthetic teaching.
-                </li>
-                <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Developed software to simulate a lab environment in RViz. 
+                  Created software to teleoperate a manipulator for kinesthetic teaching using the MoveIt Motion-Planning Framework. 
+                  Developed software and 3D meshes to simulate a lab environment in RViz for obstacle avoidance. 
                 </li>
               </ul>
             </div>
@@ -418,22 +416,6 @@
             <dd>
               <ul>
                 <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
-                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/software-development.svg">
-                  Robot Operating System
-                </li>
-                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
-                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/robot-arm.svg">
-                  Robotic Manipulation
-                </li>
-                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
-                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/rotations.svg">
-                  Kinematics
-                </li>
-                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
-                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/transform.svg">
-                  Transformations
-                </li>
-                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
                   <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/c.svg">
                   C/C++
                 </li>
@@ -449,6 +431,23 @@
                   <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/git.svg">
                   Git
                 </li>
+                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/software-development.svg">
+                  Robot Operating System
+                </li>
+                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/robot-arm.svg">
+                  Robotic Manipulation
+                </li>
+                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/rotations.svg">
+                  Kinematics
+                </li>
+                <li class="me-1 after:content-[','] inline-flex items-center text-sm text-gray-800 dark:text-neutral-200">
+                  <img class="shrink-0 size-4 me-1" width="24" height="24" viewBox="0 0 24 24" src="pictures/transform.svg">
+                  Motion Planning
+                </li>
+              
               </ul>
             </dd>
           </dl>
