update project description to include specific technologies used in the speech-to-action robotic system

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               </p>
 
               <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
-                Collaborated with PhD students to develop a speech-to-action robotic system to enable a mobile manipulator to identify,  pick, and place household items from user commands using structured and unstructured speech commands. 
+                Collaborated with PhD students to develop a speech-to-action robotic system, enabling a mobile manipulator to identify,  pick, and place household items based on speech commands using Robot Operating System (ROS), Google Speech-to-Text, GPT-Neo, and Intel RealSense RGBD Cameras.
               </p>
 
               <ul class="list-disc ms-6 mt-3 space-y-1.5">
