update coursework section in index.html to reflect current studies

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           </p>
 
           <p class="mt-1 text-sm text-gray-600 dark:text-neutral-400">
-            Coursework: Robotics, Real-time Embedded Systems, Digital Signal Processesing, Operating Systems
+            <strong>Coursework:</strong> Robotics, Data Structures & Algorithms, Real-time Embedded Systems, Computer Architecture, OS
           </p>
         </div>
 
