--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 
               <ul class="list-disc ms-6 mt-3 space-y-1.5">
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Authored and presented a conference publication at IEEE RO-MAN, cited in [1].
-                </li>
+                  Enhanced robot delivery task efficiency by 67% through code optimization in Python.
+              </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
-                    Enhanced robot delivery task efficiency by 67% through code optimization.
+                    Authored and presented a conference publication at IEEE RO-MAN, cited in [1].
                 </li>
                 <li class="ps-1 text-sm text-gray-600 dark:text-neutral-400">
                     Videos of the robot and the learning system are <a class="text-sm text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="#videos">here</a>
