--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <ul class="space-y-10">
           <li>
             <h5 class="font-medium text-sm text-gray-800 dark:text-neutral-200">
-              IEEE
+              International Conference on Robotic Computing (IRC)
             </h5>
             <p class="mt-1 text-sm text-gray-500 dark:text-neutral-500">
               <span class="text-gray-800 dark:text-neutral-200">[1] Tognotti M.</span> and Kyrarini M., 2024.  Are you Ready? an Intelligent Robotic Assistant for Instrumental Activities of Daily Living. In 2024 Eighth IEEE International Conference on Robotic Computing (IRC),  pp. 249-252, doi: 
@@ -359,7 +359,7 @@
 
           <li>
             <h5 class="font-medium text-sm text-gray-800 dark:text-neutral-200">
-              ICARA
+              International Conference on Automation, Robotics and Applications (ICARA)
             </h5>
             <p class="mt-1 text-sm text-gray-500 dark:text-neutral-500">
               <span class="text-gray-800 dark:text-neutral-200">[2]</span> Kodur K., Zand M., <span class="text-gray-800 dark:text-neutral-200">Tognotti M.</span> and Kyrarini M., 2024.  Translucent Object Grasping Using Robot Vision. In 10th International Conference on Automation, Robotics and Applications (ICARA), pp. 107-111,  IEEE. doi:
