Add GitHub icon and update copyright year

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
               /matthewtognotti
             </a>
           </li>
+
+          <li class="flex items-center gap-x-2.5">
+            <div class="dark:fill-white shrink-0 size-4">
+              <img src="images/github.svg" alt="Github Icon">
+            </div>
+            <a class="text-[13px] text-gray-500 underline hover:text-gray-800 hover:decoration-2 focus:outline-none focus:decoration-2 dark:text-neutral-500 dark:hover:text-neutral-400" href="https://github.com/matthewtognotti" target="_blank" rel="noopener noreferrer">
+              /matthewtognotti
+            </a>
+          </li>
         </ul>
       </div>
       <section id="experience" class="scroll-mt-20 mt-10 sm:mt-14">
@@ -99,7 +108,7 @@
               Work Experience
             </h2>
             <p class="mb-5 text-sm text-gray-600 dark:text-neutral-400">
-              Human Machine Interaction and Innovation Laboratory (HMI<sup>2</sup>)
+              Human Machine Interaction and Innovation Laboratory
             </p>
           </div>
 
@@ -403,7 +412,7 @@
       <div class="flex flex-wrap justify-between items-center gap-2">
         <div>
           <p class="text-xs text-gray-600 dark:text-neutral-400">
-            © 2024 Matthew Tognotti.
+            © 2025 Matthew Tognotti.
           </p>
         </div>
       </div>
