Update navbar border radius for improved aesthetics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="dark:bg-neutral-900">
   <section id="start"></section>
   <header class="fixed top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full text-sm">
-    <nav class="mt-4 relative max-w-2xl w-full bg-white border border-gray-200 rounded-[2rem] mx-2 py-2.5 md:flex md:items-center md:justify-between md:py-0 md:px-4 md:mx-auto dark:bg-neutral-900 dark:border-neutral-700">
+    <nav class="mt-4 relative max-w-2xl w-full bg-white border border-gray-200 rounded-3xl mx-2 py-2.5 md:flex md:items-center md:justify-between md:py-0 md:px-4 md:mx-auto dark:bg-neutral-900 dark:border-neutral-700">
       <div class="px-4 md:px-0 flex justify-between items-center">
         <div>
           <a class="dark:text-neutral-200 dark:hover:text-neutral-400 flex-none rounded-md text-xl inline-block font-semibold focus:outline-none focus:opacity-80" href="#start" aria-label="Matthew Tognotti">
